[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Personnage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/tilemap.tres" type="TileSet" id=3]
[ext_resource path="res://Scenes/BackGrd2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/BackGrd1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Castle.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Gomba.tscn" type="PackedScene" id=7]
[ext_resource path="res://Ressources/ciel.jpg" type="Texture" id=8]
[ext_resource path="res://Ressources/font/04B_30__.TTF" type="DynamicFontData" id=9]
[ext_resource path="res://Scenes/Area2D_Fleur.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Area2D_Blocks.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/CanvasLayerPause.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/CanvasLayerFinTuto.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/CanvasLayerMort.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[node name="Node2D" type="Node2D"]
scale = Vector2( 4, 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 682.68, 55.5902 )
texture = ExtResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 1 )

[node name="BackGrd3" parent="." instance=ExtResource( 5 )]
position = Vector2( 455.922, 162.652 )
scale = Vector2( 5, 5 )

[node name="BackGrd1" parent="." instance=ExtResource( 5 )]
position = Vector2( 1131.25, 173.02 )
scale = Vector2( 5, 5 )

[node name="BackGrd2" parent="." instance=ExtResource( 4 )]
position = Vector2( 884.847, 163.223 )
scale = Vector2( 5, 5 )

[node name="Castle" parent="." instance=ExtResource( 6 )]
position = Vector2( 844, 200 )

[node name="LabelObjets" type="Label" parent="."]
margin_left = 171.283
margin_top = 131.445
margin_right = 1386.28
margin_bottom = 230.445
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 1 )
text = "Certains blocks vous donnent des objets comme les
champignons et les fleurs de feu
 vous donnent des pouvoirs speciaux"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGomba" type="Label" parent="."]
margin_left = 469.291
margin_top = 181.503
margin_right = 1433.29
margin_bottom = 280.503
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 1 )
text = "Sauter sur la tete du 
gomba pour le tuer. Attention, s'il vous 
touche vous mourrez"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFleur" type="Label" parent="."]
margin_left = 269.397
margin_top = 182.481
margin_right = 1111.4
margin_bottom = 281.481
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 1 )
text = "Appuyer sur J pour
 tirer
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFleche" type="Label" parent="."]
margin_left = 10.1083
margin_top = 155.192
margin_right = 610.108
margin_bottom = 220.192
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 1 )
text = "Utiliser les fleches pour
 vous deplacer."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KinematicBody2D" parent="." instance=ExtResource( 7 )]
position = Vector2( 595.535, 228.538 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -2, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, 65534, 1, 0, 65535, 1, 0, 131070, 1, 0, 131071, 1, 0, 196606, 1, 0, 196607, 1, 0, 262142, 1, 0, 262143, 1, 0, 327678, 1, 0, 327679, 1, 0, 393214, 1, 0, 393215, 1, 0, 458750, 1, 0, 458751, 1, 0, 393260, 7, 0, 524286, 1, 0, 524287, 1, 0, 589822, 1, 0, 589823, 1, 0, 524330, 7, 0, 655358, 1, 0, 655359, 1, 0, 589866, 7, 0, 589867, 7, 0, 720894, 1, 0, 720895, 1, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 2, 0, 655401, 7, 0, 655402, 7, 0, 655403, 7, 0, 655404, 7, 0, 655405, 7, 0, 655406, 7, 0, 655407, 7, 0, 655408, 7, 0, 655409, 6, 0, 655410, 7, 0, 786430, 1, 0, 786431, 1, 0, 720938, 7, 0, 720939, 7, 0, 720940, 7, 0, 720941, 7, 0, 720942, 7, 0, 720946, 7, 0, 720947, 7, 0, 720948, 7, 0, 851966, 1, 0, 851967, 1, 0, 786477, 7, 0, 786478, 7, 0, 786486, 7, 0, 917502, 1, 0, 917503, 1, 0, 852016, 7, 0, 852020, 7, 0, 983038, 1, 0, 983039, 1, 0, 917535, 2, 0, 917544, 2, 0, 917548, 7, 0, 917549, 7, 0, 917550, 7, 0, 917551, 7, 0, 917552, 7, 0, 917553, 7, 0, 917554, 7, 0, 917555, 7, 0, 1048574, 1, 0, 1048575, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 1, 0, 983070, 1, 0, 983071, 1, 0, 983072, 1, 0, 983073, 1, 0, 983074, 1, 0, 983075, 1, 0, 983076, 1, 0, 983077, 1, 0, 983078, 1, 0, 983079, 1, 0, 983080, 1, 0, 983081, 1, 0, 983082, 1, 0, 983083, 1, 0, 983084, 1, 0, 983085, 1, 0, 983086, 1, 0, 983087, 1, 0, 983088, 1, 0, 983089, 1, 0, 983090, 1, 0, 983091, 1, 0, 983092, 1, 0, 983093, 1, 0, 983094, 1, 0, 983095, 1, 0, 983096, 1, 0, 983097, 1, 0, 983098, 1, 0, 983099, 1, 0, 983100, 1, 0, 983101, 1, 0, 983102, 1, 0, 983103, 1, 0, 983104, 1, 0, 983105, 1, 0, 983106, 1, 0, 983107, 1, 0, 983108, 1, 0, 983109, 1, 0, 983110, 1, 0, 983111, 1, 0, 983112, 1, 0, 983113, 1, 0, 983114, 1, 0, 983115, 1, 0, 983116, 1, 0, 983117, 1, 0, 983118, 1, 0, 983119, 1, 0, 983120, 1, 0, 1114110, 1, 0, 1114111, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 1, 0, 1048603, 1, 0, 1048604, 1, 0, 1048605, 1, 0, 1048606, 1, 0, 1048607, 1, 0, 1048608, 1, 0, 1048609, 1, 0, 1048610, 1, 0, 1048611, 1, 0, 1048612, 1, 0, 1048613, 1, 0, 1048614, 1, 0, 1048615, 1, 0, 1048616, 1, 0, 1048617, 1, 0, 1048618, 1, 0, 1048619, 1, 0, 1048620, 1, 0, 1048621, 1, 0, 1048622, 1, 0, 1048623, 1, 0, 1048624, 1, 0, 1048625, 1, 0, 1048626, 1, 0, 1048627, 1, 0, 1048628, 1, 0, 1048629, 1, 0, 1048630, 1, 0, 1048631, 1, 0, 1048632, 1, 0, 1048633, 1, 0, 1048634, 1, 0, 1048635, 1, 0, 1048636, 1, 0, 1048637, 1, 0, 1048638, 1, 0, 1048639, 1, 0, 1048640, 1, 0, 1048641, 1, 0, 1048642, 1, 0, 1048643, 1, 0, 1048644, 1, 0, 1048645, 1, 0, 1048646, 1, 0, 1048647, 1, 0, 1048648, 1, 0, 1048649, 1, 0, 1048650, 1, 0, 1048651, 1, 0, 1048652, 1, 0, 1048653, 1, 0, 1048654, 1, 0, 1048655, 1, 0, 1114160, 7, 0, 1114161, 7, 0, 1179697, 7, 0, 1179698, 7, 0, 1179699, 7, 0, 1179700, 7, 0, 1179704, 7, 0, 1179705, 7, 0, 1179706, 7, 0, 1245242, 7, 0, 1245243, 7, 0, 1245244, 7, 0, 1245245, 7, 0, 1245246, 7, 0, 1245247, 7, 0, 1245248, 7, 0, 1245251, 7, 0, 1245252, 7, 0 )

[node name="Area2D3" parent="." instance=ExtResource( 11 )]
position = Vector2( 296, 168 )

[node name="Area2D2" parent="." instance=ExtResource( 11 )]
position = Vector2( 280.035, 168 )

[node name="Area2D" parent="." instance=ExtResource( 11 )]
position = Vector2( 264, 168 )

[node name="Area2D_Fleur" parent="." instance=ExtResource( 10 )]
position = Vector2( 312, 168 )
scale = Vector2( 0.25, 0.25 )

[node name="Mario" parent="." instance=ExtResource( 2 )]
position = Vector2( 56.8636, 207.005 )

[node name="CanvasLayer" parent="." instance=ExtResource( 12 )]

[node name="CanvasLayer2" parent="." instance=ExtResource( 13 )]

[node name="CanvasLayer3" parent="." instance=ExtResource( 14 )]
